 <!--  Copyright (c) 2010-2011, The MiCode Open Source Community (www.micode.net)

         Licensed under the Apache License, Version 2.0 (the "License");
         you may not use this file except in compliance with the License.
         You may obtain a copy of the License at

              http://www.apache.org/licenses/LICENSE-2.0

         Unless required by applicable law or agreed to in writing, software
         distributed under the License is distributed on an "AS IS" BASIS,
         WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
         See the License for the specific language governing permissions and
         limitations under the License.
     -->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/list_background"
    android:fitsSystemWindows="true">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/note_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_modified_date"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="left|center_vertical"
                android:layout_marginRight="8dip"
                android:textAppearance="@style/TextAppearanceSecondaryItem"/>
            <ImageView
                android:id="@+id/iv_alert_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/title_alert"/>
            <TextView
                android:id="@+id/tv_alert_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="2dip"
                android:layout_marginRight="8dip"
                android:textAppearance="@style/TextAppearanceSecondaryItem"/>
            <!-- 新增：字符数显示控件 -->
            <TextView
                android:id="@+id/tv_char_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="8dip"
                />
            <ImageButton
                android:id="@+id/btn_set_bg_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/bg_btn_set_color"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/sv_note_edit"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">
            <!-- Habit calendar and stats panel -->
            <LinearLayout
                android:id="@+id/habit_panel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                android:padding="8dp">
                <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal" android:gravity="center_vertical">
                    <Button android:id="@+id/btn_prev_month" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="&lt;" />
                    <TextView android:id="@+id/tv_habit_month" android:layout_width="0dp" android:layout_weight="1" android:layout_height="wrap_content" android:gravity="center" android:textSize="16sp" />
                    <Button android:id="@+id/btn_next_month" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="&gt;" />
                </LinearLayout>
                <GridLayout android:id="@+id/habit_calendar_grid" android:layout_width="match_parent" android:layout_height="wrap_content" android:columnCount="7" android:useDefaultMargins="true" android:alignmentMode="alignBounds" />
                <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal" android:gravity="center" android:layout_marginTop="8dp">
                    <TextView android:id="@+id/tv_habit_total" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="总计: 0" />
                </LinearLayout>
                <ProgressBar android:id="@+id/progress_habit_goal" style="?android:attr/progressBarStyleHorizontal" android:layout_width="match_parent" android:layout_height="8dp" android:progress="0" android:layout_marginTop="4dp" />
            </LinearLayout>
            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="7dip"
                android:background="@drawable/bg_color_btn_mask"/>
            <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:scrollbars="none"
                android:overScrollMode="never"
                android:layout_gravity="left|top"
                android:fadingEdgeLength="0dip">
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <jp.wasabeef.richeditor.RichEditor
                        android:id="@+id/note_edit_view"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left|top"
                        android:background="@null"
                        android:autoLink="all"
                        android:linksClickable="false"
                        android:minLines="12"
                        android:textAppearance="@style/TextAppearancePrimaryItem"
                        android:lineSpacingMultiplier="1.2"/>
                    <LinearLayout
                        android:id="@+id/note_edit_list"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginLeft="-10dip"
                        android:visibility="gone"/>
                </LinearLayout>
            </ScrollView>
            <ImageView android:layout_width="fill_parent" android:layout_height="7dip" android:background="@drawable/bg_color_btn_mask"/>
        </LinearLayout>
    </LinearLayout>
    <ImageView
        android:id="@+id/btn_set_bg_color"
        android:layout_height="43dip"
        android:layout_width="wrap_content"
        android:background="@drawable/bg_color_btn_mask"
        android:layout_gravity="top|right"/>
    <LinearLayout
        android:id="@+id/note_bg_color_selector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:background="@drawable/note_edit_color_selector_panel" android:layout_marginTop="30dip" android:layout_marginRight="8dip" android:layout_gravity="top|right" android:visibility="gone">
        <FrameLayout android:layout_width="0dip" android:layout_height="match_parent" android:layout_weight="1">
            <ImageView android:id="@+id/iv_bg_yellow" android:layout_width="match_parent" android:layout_height="match_parent"/>
            <ImageView android:id="@+id/iv_bg_yellow_select" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="bottom|right" android:layout_marginRight="5dip" android:focusable="false" android:visibility="gone" android:src="@drawable/selected"/>
        </FrameLayout>
        <FrameLayout android:layout_width="0dip" android:layout_height="match_parent" android:layout_weight="1">
            <ImageView android:id="@+id/iv_bg_blue" android:layout_width="match_parent" android:layout_height="match_parent"/>
            <ImageView android:id="@+id/iv_bg_blue_select" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="bottom|right" android:focusable="false" android:visibility="gone" android:layout_marginRight="3dip" android:src="@drawable/selected"/>
        </FrameLayout>
        <FrameLayout android:layout_width="0dip" android:layout_height="match_parent" android:layout_weight="1">
            <ImageView android:id="@+id/iv_bg_white" android:layout_width="match_parent" android:layout_height="match_parent"/>
            <ImageView android:id="@+id/iv_bg_white_select" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="bottom|right" android:focusable="false" android:visibility="gone" android:layout_marginRight="2dip" android:src="@drawable/selected"/>
        </FrameLayout>
        <FrameLayout android:layout_width="0dip" android:layout_height="match_parent" android:layout_weight="1">
            <ImageView android:id="@+id/iv_bg_green" android:layout_width="match_parent" android:layout_height="match_parent"/>
            <ImageView android:id="@+id/iv_bg_green_select" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="bottom|right" android:focusable="false" android:visibility="gone" android:src="@drawable/selected"/>
        </FrameLayout>
        <FrameLayout android:layout_width="0dip" android:layout_height="match_parent" android:layout_weight="1">
            <ImageView android:id="@+id/iv_bg_red" android:layout_width="match_parent" android:layout_height="match_parent"/>
            <ImageView android:id="@+id/iv_bg_red_select" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="bottom|right" android:focusable="false" android:visibility="gone" android:src="@drawable/selected"/>
        </FrameLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/font_size_selector" android:layout_width="fill_parent" android:layout_height="wrap_content" android:background="@drawable/font_size_selector_bg" android:layout_gravity="bottom" android:visibility="gone">
        <FrameLayout android:id="@+id/ll_font_small" android:layout_width="0dip" android:layout_height="wrap_content" android:layout_weight="1">
            <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="vertical" android:layout_gravity="center" android:gravity="center">
                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/font_small" android:layout_marginBottom="5dip"/>
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/menu_font_small" android:textAppearance="@style/TextAppearanceUnderMenuIcon"/>
            </LinearLayout>
            <ImageView android:id="@+id/iv_small_select" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="bottom|right" android:layout_marginRight="6dip" android:layout_marginBottom="-7dip" android:focusable="false" android:visibility="gone" android:src="@drawable/selected"/>
        </FrameLayout>
        <FrameLayout android:id="@+id/ll_font_normal" android:layout_width="0dip" android:layout_height="wrap_content" android:layout_weight="1">
            <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="vertical" android:layout_gravity="center" android:gravity="center">
                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/font_normal" android:layout_marginBottom="5dip"/>
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/menu_font_normal" android:textAppearance="@style/TextAppearanceUnderMenuIcon"/>
            </LinearLayout>
            <ImageView android:id="@+id/iv_medium_select" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="bottom|right" android:focusable="false" android:visibility="gone" android:layout_marginRight="6dip" android:layout_marginBottom="-7dip" android:src="@drawable/selected"/>
        </FrameLayout>
        <FrameLayout android:id="@+id/ll_font_large" android:layout_width="0dip" android:layout_height="wrap_content" android:layout_weight="1">
            <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="vertical" android:layout_gravity="center" android:gravity="center">
                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/font_large" android:layout_marginBottom="5dip"/>
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/menu_font_large" android:textAppearance="@style/TextAppearanceUnderMenuIcon"/>
            </LinearLayout>
            <ImageView android:id="@+id/iv_large_select" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="bottom|right" android:focusable="false" android:visibility="gone" android:layout_marginRight="6dip" android:layout_marginBottom="-7dip" android:src="@drawable/selected"/>
        </FrameLayout>
        <FrameLayout android:id="@+id/ll_font_super" android:layout_width="0dip" android:layout_height="wrap_content" android:layout_weight="1">
            <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="vertical" android:layout_gravity="center" android:gravity="center">
                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/font_super" android:layout_marginBottom="5dip"/>
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/menu_font_super" android:textAppearance="@style/TextAppearanceUnderMenuIcon"/>
            </LinearLayout>
            <ImageView android:id="@+id/iv_super_select" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="bottom|right" android:focusable="false" android:visibility="gone" android:layout_marginRight="6dip" android:layout_marginBottom="-7dip" android:src="@drawable/selected"/>
        </FrameLayout>
    </LinearLayout>
    <!-- 横向滚动的富文本工具栏（放在RichEditor下方） -->
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="bottom"
        android:background="@android:color/transparent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingHorizontal="8dp">

            <!-- 加粗按钮 -->
            <Button
                android:id="@+id/action_bold"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/action_bold"
                android:backgroundTint="@null"
                android:focusable="false"
                android:clickable="true"/>

            <!-- 斜体按钮 -->
            <Button
                android:id="@+id/action_italic"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/action_italic"
                android:backgroundTint="@null"
                android:focusable="false"
                android:clickable="true"/>
            <!-- 涂鸦按钮 -->

            <!-- 可选：补充其他富文本按钮（如撤销、背景色），和你之前的功能对应 -->
            <Button
                android:id="@+id/action_undo"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="4dp"
                android:background="@drawable/action_undo"
                android:backgroundTint="@null"

                android:focusable="false"/>
            <Button
                android:id="@+id/action_doodle"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="4dp"
                android:background="@drawable/draw"
                android:focusable="false"
                android:textStyle="bold"
                android:clickable="true"/>

        </LinearLayout>
    </HorizontalScrollView>

</FrameLayout>